[package]
name = "json-access-control"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
serde = { version = "1.0.219", features = ["derive"] }
syn = { version = "2.0.104", features = ["full"] }

[dev-dependencies]
serde_json = "1.0.133"

[[examples]]
name = "ex"
path = "examples/ex.rs"
